--- a/main-module/src/main/webapp/WEB-INF/web.xml
+++ b/main-module/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/beans.xml</param-value>
+        <param-value>classpath:spring/root-context.xml</param-value>
     </context-param>
 
     <listener>
