--- a/main-module/src/main/resources/properties/application.properties
+++ b/main-module/src/main/resources/properties/application.properties
@@ -1,2 +1,6 @@
 hello.jsp=hello
 rest.message=Please receive by REST
+
+wide.table.parser.start.tag=<table
+wide.table.parser.end.tag=</table>
+wide.table.parser.entities.to.cut=&
