--- a/main-module/src/test/resources/application.properties
+++ b/main-module/src/test/resources/application.properties
@@ -1,4 +1,5 @@
-wide.table.parser.start.tag=<table
-wide.table.parser.end.tag=</table>
-wide.table.parser.entities.to.cut=&
-wide.table.parser.test.file.name=updateWideTable.txt
+tables.parser.start.tag=<table
+tables.parser.end.tag=</table>
+tables.parser.entities.to.cut=&
+wide.table.team.parser.test.file.name=updateWideTableTeam.txt
+form.table.team.parser.test.file.name=updateFormTableTeam.txt
