--- a/main-module/src/test/resources/application.properties
+++ b/main-module/src/test/resources/application.properties
@@ -3,3 +3,4 @@ tables.parser.end.tag=</table>
 tables.parser.entities.to.cut=&
 wide.table.team.parser.test.file.name=updateWideTableTeam.txt
 form.table.team.parser.test.file.name=updateFormTableTeam.txt
+over.under.table.team.parser.test.file.name=updateOverUnderTableTeam.txt
