--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </modules>
 
     <properties>
+        <encoding>UTF-8</encoding>
         <java.version>1.8</java.version>
         <spring.version>5.0.5.RELEASE</spring.version>
         <servlet.version>4.0.0</servlet.version>
