--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <encoding>UTF-8</encoding>
         <java.version>1.8</java.version>
         <spring.version>5.0.5.RELEASE</spring.version>
+        <h2.version>1.4.197</h2.version>
+        <hikary.connection-pool.version>3.1.0</hikary.connection-pool.version>
         <servlet.version>4.0.0</servlet.version>
         <inject.verrsion>1</inject.verrsion>
         <jstl.version>1.2</jstl.version>
@@ -40,7 +42,28 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
 
+            <!--DATABASE-->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+                <!--<scope>test</scope>-->
+            </dependency>
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>${hikary.connection-pool.version}</version>
+            </dependency>
+
+
+
+            <!--VIEW-->
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
@@ -59,6 +82,7 @@
                 <version>${inject.verrsion}</version>
             </dependency>
 
+            <!--TESTS-->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -72,6 +96,7 @@
                 <scope>test</scope>
             </dependency>
 
+            <!--ADDITIONAL LIBRARIES-->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
