create Team controller

--- a/main-module/src/main/resources/properties/jdbc.properties
+++ b/main-module/src/main/resources/properties/jdbc.properties
@@ -1,9 +1,7 @@
 dataSource.url=jdbc:h2:mem:FOOTBALL_MANAGER
-datasource.driverClassName=org.h2.Driver
+datasource.driverClassName=org.h2.jdbcx.JdbcDataSource
 dataSource.username=sa
 dataSource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 hikari.maximumPoolSize=70
 hikari.idleTimeout=120000
