--- a/main-module/pom.xml
+++ b/main-module/pom.xml
@@ -73,7 +73,7 @@
     </dependencies>
 
     <build>
-        <finalName>${project.parent.artifactId}-${project.parent.version}</finalName>
+        <finalName>${project.parent.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
