add constrains to database. Ass mysql support

--- a/main-module/src/main/resources/properties/jdbc.properties
+++ b/main-module/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,7 @@
-dataSource.url=jdbc:h2:mem:FOOTBALL_MANAGER
-datasource.driverClassName=org.h2.jdbcx.JdbcDataSource
-dataSource.username=sa
-dataSource.password=
+dataSource.url=jdbc:mysql://localhost:3306/football_manager?useUnicode=true&characterEncoding=utf8
+datasource.driverClassName=com.mysql.jdbc.Driver
+dataSource.username=root
+dataSource.password=root
 
 hikari.maximumPoolSize=70
 hikari.idleTimeout=120000
