fixed transactions and dataSource

--- a/main-module/src/main/resources/properties/jdbc.properties
+++ b/main-module/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,7 @@
-dataSource.url=jdbc:mysql://localhost:3306/football_manager?useUnicode=true&characterEncoding=utf8
-datasource.driverClassName=com.mysql.jdbc.Driver
-dataSource.username=root
-dataSource.password=root
+jdbc.url=jdbc:mysql://localhost:3306/football_manager?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.username=root
+jdbc.password=root
 
 hikari.maximumPoolSize=70
 hikari.idleTimeout=120000
