--- a/main-module/pom.xml
+++ b/main-module/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!--ADDITIONAL LIBRARIES-->
         <dependency>
