--- a/main-module/src/main/resources/properties/jdbc.properties
+++ b/main-module/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.url=jdbc:mysql://localhost:3306/football_manager?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.username=root
 jdbc.password=root
 
