--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <inject.verrsion>1</inject.verrsion>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.12</junit.version>
+        <mockito.version>1.10.19</mockito.version>
         <jackson.version>2.9.5</jackson.version>
         <log4j.version>1.7.25</log4j.version>
         <log4j2.version>2.11.0</log4j2.version>
@@ -136,6 +137,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
 
