--- a/main-module/src/test/resources/properties/application.properties
+++ b/main-module/src/test/resources/properties/application.properties
@@ -4,3 +4,5 @@ tables.parser.entities.to.cut=&
 wide.table.team.parser.test.file.name=updateWideTableTeam.txt
 form.table.team.parser.test.file.name=updateFormTableTeam.txt
 over.under.table.team.parser.test.file.name=updateOverUnderTableTeam.txt
+
+url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%s","round_id":"%s","outgroup":"false","competition_id":"%s","new_design_callback":""}&action=changeTable&params={"type":"%s"}
