--- a/main-module/src/main/resources/properties/application.properties
+++ b/main-module/src/main/resources/properties/application.properties
@@ -5,5 +5,5 @@ tables.parser.start.tag=<table
 tables.parser.end.tag=/table>
 tables.parser.entities.to.cut=&
 
-url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%s","round_id":"%s","outgroup":"false","competition_id":"%s","new_design_callback":""}&action=changeTable&params={"type":"%s"}
+url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%seasonId","round_id":"%roundId","outgroup":"false","competition_id":"%competitionId","new_design_callback":""}&action=changeTable&params={"type":"%type"}
 
