--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <log4j2.version>2.11.0</log4j2.version>
         <hibernate-validator.version>6.0.9.Final</hibernate-validator.version>
         <el-api.version>2.2.1-b04</el-api.version>
+        <apache.http-client.version>4.5.5</apache.http-client.version>
 
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-war-plugin.version>3.2.0</maven-war-plugin.version>
@@ -171,6 +172,11 @@
                 <groupId>javax.el</groupId>
                 <artifactId>el-api</artifactId>
                 <version>${el-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${apache.http-client.version}</version>
             </dependency>
 
         </dependencies>
