--- a/main-module/src/main/resources/properties/application.properties
+++ b/main-module/src/main/resources/properties/application.properties
@@ -7,3 +7,8 @@ tables.parser.entities.to.cut=&
 
 url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%seasonId","round_id":"%roundId","outgroup":"false","competition_id":"%competitionId","new_design_callback":""}&action=changeTable&params={"type":"%type"}
 
+amount.tasks.managers=2
+amount.crawler.managers=3
+amount.parsers.managers=2
+amount.predictions.managers=2
+amount.prediction.savers.managers=2
