--- a/main-module/src/test/resources/properties/application.properties
+++ b/main-module/src/test/resources/properties/application.properties
@@ -6,3 +6,10 @@ form.table.team.parser.test.file.name=updateFormTableTeam.txt
 over.under.table.team.parser.test.file.name=updateOverUnderTableTeam.txt
 
 url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%seasonId","round_id":"%roundId","outgroup":"false","competition_id":"%competitionId","new_design_callback":""}&action=changeTable&params={"type":"%type"}
+
+amount.tasks.getting.managers=1
+amount.tasks.processing.managers=2
+amount.crawler.managers=3
+amount.parsers.managers=2
+amount.prediction.calculate.managers=2
+amount.prediction.savers.managers=1
