--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <hibernate-validator.version>6.0.9.Final</hibernate-validator.version>
         <el-api.version>2.2.1-b04</el-api.version>
         <apache.http-client.version>4.5.5</apache.http-client.version>
+        <common-lang.version>3.7</common-lang.version>
 
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-war-plugin.version>3.2.0</maven-war-plugin.version>
@@ -177,6 +178,11 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${apache.http-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${common-lang.version}</version>
             </dependency>
 
         </dependencies>
