--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <el-api.version>2.2.1-b04</el-api.version>
         <apache.http-client.version>4.5.5</apache.http-client.version>
         <common-lang.version>3.7</common-lang.version>
+        <common-colection.veriosn>4.1</common-colection.veriosn>
 
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-war-plugin.version>3.2.0</maven-war-plugin.version>
