--- a/main-module/src/test/resources/properties/application.properties
+++ b/main-module/src/test/resources/properties/application.properties
@@ -5,6 +5,10 @@ wide.table.team.parser.test.file.name=updateWideTableTeam.txt
 form.table.team.parser.test.file.name=updateFormTableTeam.txt
 over.under.table.team.parser.test.file.name=updateOverUnderTableTeam.txt
 
+predictor.test.wide=predictorWide.txt
+predictor.test.form=predictorForm.txt
+predictor.test.over.under=predictorOverUnder.txt
+
 url.pattern=https://ru.soccerway.com/a/block_competition_tables?block_id=page_competition_1_block_competition_tables_7&callback_params={"season_id":"%seasonId","round_id":"%roundId","outgroup":"false","competition_id":"%competitionId","new_design_callback":""}&action=changeTable&params={"type":"%type"}
 
 amount.tasks.getting.managers=1
